--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend-project-lvl2",
+  "name": "gendiff",
   "version": "1.0.4",
   "description": "",
   "main": "dist/index.js",
