--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,3 +23,10 @@ jobs:
     - run: make lint
       env:
         CI: true
+    - name: Test & publish code coverage
+      uses: paambaati/codeclimate-action@v2.4.0
+      env:
+        CC_TEST_REPORTER_ID: 8619d4978437e2cb0bae4fd71363f5d4bc301300b941b5c97caef74868457e11
+      with:
+        coverageCommand: make test-coverage
+        debug: true
