--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "gendiff",
-  "version": "1.0.5",
-  "description": "",
+  "name": "frontend-project-lvl2",
+  "version": "1.0.6",
+  "description": "Проект 'Hexlet: Выяислитель отличий'",
   "main": "dist/index.js",
   "bin": {
     "gendiff": "dist/bin/gendiff.js"
   },
+  "keywords": [
+    "hexlet",
+    "вычислитель отличий",
+    "frontend",
+    "gendiff"
+  ],
   "scripts": {
     "test": "jest",
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
